--- a/vans/public/content.html
+++ b/vans/public/content.html
@@ -121,7 +121,7 @@
             
         </div>
     </div>
-    <div class="RightTitle">
+    <!-- <div class="RightTitle">
       <div class="name">
           <h2>ROWAN ZORILLA</h2>
       </div>
@@ -149,12 +149,12 @@
           滑板站姿：<br>
           Goofy
       </span>
-    </div>
+    </div> -->
   </div>
         <script>
             var i=0;
             var LIWIDTH=987;
-            var DURATION=500;
+            var DURATION=100;
             var LICOUNT=4;
             var ulImages=document.getElementById("ul-images");
             var ulIdx=document.getElementById("ul-idx");
