--- a/vans/public/footer.html
+++ b/vans/public/footer.html
@@ -5,12 +5,6 @@
     <title></title>
     <!-- 设置视口 -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <!-- 导入css -->
-    <link rel="stylesheet" href="../css/bootstrap.css"/>
-    <!-- 导入3个js -->
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/popper.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/comm.css"/>
     <link rel="stylesheet" href="css/footer.css"/>
 </head>
@@ -55,14 +49,18 @@
             </div>
             <div class="footer_right">
                 <span class="top_font2" >在这些地方找到我们</span>
-                <div class="img_top">
-                    <img src="img/1.png" alt=""/>
-                </div>
+                <ul class="ImgLogo">
+                    <li><a href="javascript:"><img src="footerimg/WECHAT.png" alt="" class="wechat"></a></li>
+                    <li><a href="javascript:"><img src="footerimg/sina.png" alt="" class="sina"></a> </li>
+                    <li><a href="javascript:"><img src="footerimg/Nice.png" alt="" class="nice"></a> </li>
+                    <li><a href="javascript:"> <img src="footerimg/tx.png" alt="" class="tx"></a></li>
+                    <li><a href="javascript:"><img src="footerimg/instargam.png" alt="" class="InstArgam"></a> </li> 
+                </ul>
             </div>
         </div>
         <div class="footer_bottom">
             <div>
-                <img class="img_width" src="img/2.png" alt=""/>
+                <img class="img_width" src="footerimg/bvans.png" alt=""/>
             </div>
             <a href="#" class="bottom_color">苏ICP备13010219号</a>
             &nbsp; &nbsp; &nbsp;
@@ -70,43 +68,41 @@
             <br/>
             <a href="#" class="bottom_color1">威富服饰(中国)有限公司</a>
             <br/>
-            <div class="dropdown ">
-                <button class="btn  dropdown-toggle" data-toggle="dropdown">中国</button>
-                <ul class="dropdown-menu top_menu">
-                    <li><a href="#" class="menu">中国</a></li>
-                    <li><a href="#" class="menu">中国香港(繁体中文)</a></li>
-                    <li><a href="#" class="menu">中国香港(英语)</a></li>
-                    <li><a href="#" class="menu">中国台湾</a></li>
-                    <li><a href="#" class="menu">阿根廷</a></li>
-                    <li><a href="#" class="menu">爱尔兰</a></li>
-                    <li><a href="#" class="menu">奥地利</a></li>
-                    <li><a href="#" class="menu">澳大利亚</a></li>
-                    <li><a href="#" class="menu">巴西</a></li>
-                    <li><a href="#" class="menu">波兰</a></li>
-                    <li><a href="#" class="menu">德国</a></li>
-                    <li><a href="#" class="menu">俄罗斯</a></li>
-                    <li><a href="#" class="menu">法国</a></li>
-                    <li><a href="#" class="menu">韩国</a></li>
-                    <li><a href="#" class="menu">荷兰</a></li>
-                    <li><a href="#" class="menu">加拿大(法语)</a></li>
-                    <li><a href="#" class="menu">加拿大(英语)</a></li>
-                    <li><a href="#" class="menu">马来西亚</a></li>
-                    <li><a href="#" class="menu">美国</a></li>
-                    <li><a href="#" class="menu">墨西哥(西班牙语)</a></li>
-                    <li><a href="#" class="menu">葡萄牙</a></li>
-                    <li><a href="#" class="menu">日本</a></li>
-                    <li><a href="#" class="menu">瑞典</a></li>
-                    <li><a href="#" class="menu">瑞士</a></li>
-                    <li><a href="#" class="menu">土耳其</a></li>
-                    <li><a href="#" class="menu">西班牙</a></li>
-                    <li><a href="#" class="menu">新加坡</a></li>
-                    <li><a href="#" class="menu">新西兰</a></li>
-                    <li><a href="#" class="menu">以色列</a></li>
-                    <li><a href="#" class="menu">意大利</a></li>
-                    <li><a href="#" class="menu">印度</a></li>
-                    <li><a href="#" class="menu">英国</a></li>
-                </ul>
-            </div>
+            
+            <select class="sel">
+                <option value="">中国</option>
+                <option value="">中国香港(繁体中文)</option>
+                <option value="">中国香港(英语)</option>
+                <option value="">中国台湾</option>
+                <option value="">阿根廷</option>
+                <option value="">爱尔兰</option>
+                <option value="">奥地利</option>
+                <option value="">澳大利亚</option>
+                <option value="">巴西</option>
+                <option value="">波兰</option>
+                <option value="">德国</option>
+                <option value="">俄罗斯</option>
+                <option value="">法国</option>
+                <option value="">韩国</option>
+                <option value="">荷兰</option>
+                <option value="">加拿大(法语)</option>
+                <option value="">加拿大(英语)</option>
+                <option value="">马来西亚</option>
+                <option value="">美国</option>
+                <option value="">墨西哥(西班牙语)</option>
+                <option value="">葡萄牙</option>
+                <option value="">日本</option>
+                <option value="">瑞典</option>
+                <option value="">瑞士</option>
+                <option value="">土耳其</option>
+                <option value="">西班牙</option>
+                <option value="">新加坡</option>
+                <option value="">新西兰</option>
+                <option value="">以色列</option>
+                <option value="">意大利</option>
+                <option value="">印度</option>
+                <option value="">英国</option>
+            </select>
         </div>
     </div>
 
