--- a/vans/public/header.html
+++ b/vans/public/header.html
@@ -20,7 +20,10 @@
                 </li>
             </ul>
         </div>
-        <img class="img_width" src="img/vans.png" alt=""/>
+        <div class="logo">
+            <a href="index.html"><img src="img/vans.png" alt=""/></a> 
+        </div>
+       
         <div>
             <ul class="other_top1">
                 <li class="titles">关于VANS/</li>
@@ -37,7 +40,7 @@
     <div class="background"></div>
 </div>
 </header>
-<!--<script src="js/jquery-1.11.3.js"></script>
+<script src="js/jquery-1.11.3.js"></script>
 <script>
     var $input_top=$(".input_top");
     var $search=$(".search");
@@ -54,4 +57,4 @@
     $input_top.on("input",function(){
         $search.click();
     })
-</script>-->
+</script>
