--- a/vans/public/index.html
+++ b/vans/public/index.html
@@ -10,7 +10,26 @@
 </head>
 <body>
 <div class="container">
-    
+    <div>
+        <img src="index/index1.jpg" alt="">
+    </div>
+    <div >
+        <ul class="active">
+            <li><img src="index/index2.jpg" alt=""></li>
+            <li><img src="index/index3.jpg" alt=""></li>
+            <li><img src="index/index4.jpg" alt=""></li>
+            <li><img src="index/index5.png" alt=""></li>
+            <li><img src="index/index6.png" alt=""></li>
+            <li><img src="index/index7.png" alt=""></li>
+        </ul>
+    </div>
+    <div>
+        <ul class="active1">
+            <li><img src="index/index8.jpg" alt=""></li>
+            <li><img src="index/index9.jpg" alt=""></li>
+            <li><img src="index/index10.jpg" alt=""></li>
+        </ul>
+    </div>
 </div>
 </body>
 </html>
